--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Be My Valentine ❤️</title>
+<title>Be My Valentine 💕</title>
 
 <style>
 body {
     margin: 0;
     height: 100vh;
     overflow: hidden;
-    background: linear-gradient(135deg, #ff758c, #ff7eb3);
+    font-family: 'Comic Sans MS', cursive;
+    background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #ffdde1, #ffc3a0);
+    background-size: 400% 400%;
+    animation: gradientBG 8s ease infinite;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Arial', sans-serif;
+}
+
+@keyframes gradientBG {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
 }
 
 .container {
@@ -24,23 +32,29 @@ body {
 }
 
 h1 {
+    font-size: 3rem;
     color: white;
-    font-size: 2.8rem;
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
 
 button {
-    padding: 12px 25px;
-    font-size: 18px;
+    padding: 15px 30px;
+    font-size: 20px;
     border: none;
-    border-radius: 30px;
+    border-radius: 50px;
     cursor: pointer;
     margin: 20px;
-    transition: 0.3s;
+    transition: all 0.3s ease;
 }
 
 #yesBtn {
     background: #ff4b5c;
     color: white;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+}
+
+#yesBtn:hover {
+    transform: scale(1.1);
 }
 
 #noBtn {
@@ -51,16 +65,21 @@ button {
 
 #message {
     display: none;
+    font-size: 28px;
     color: white;
-    font-size: 24px;
     margin-top: 20px;
+    animation: pop 0.6s ease forwards;
+}
+
+@keyframes pop {
+    0% {transform: scale(0);}
+    100% {transform: scale(1);}
 }
 
 /* Floating hearts */
 .heart {
     position: absolute;
-    color: rgba(255,255,255,0.8);
-    font-size: 20px;
+    color: white;
     animation: floatUp 6s linear infinite;
 }
 
@@ -80,14 +99,15 @@ button {
 <body>
 
 <div class="container">
-    <h1>Will you be my Valentine? ❤️</h1>
-    <button id="yesBtn">Yes 💖</button>
-    <button id="noBtn">No 💔</button>
-    <div id="message">Yayyyyy!! 🥰 You just made my day ❤️</div>
+    <h1>Will you be my Valentine? 💖</h1>
+    <button id="yesBtn">Yes 😍</button>
+    <button id="noBtn">No 🙈</button>
+    <div id="message">YAYYYY 🥰💍 You just made me the happiest person alive 💕</div>
 </div>
 
+<!-- Romantic instrumental music -->
 <audio autoplay loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+    <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c8b1e9f2a6.mp3?filename=romantic-background-110624.mp3" type="audio/mp3">
 </audio>
 
 <script>
@@ -95,37 +115,51 @@ const noBtn = document.getElementById("noBtn");
 const yesBtn = document.getElementById("yesBtn");
 const message = document.getElementById("message");
 
-// Move No button
+let yesScale = 1;
+
+// No button shifts slightly
 noBtn.addEventListener("mouseenter", function() {
-    const maxX = 200;  // how far it can move left/right
-    const maxY = 100;  // how far it can move up/down
-
-    const randomX = (Math.random() - 0.5) * maxX;
-    const randomY = (Math.random() - 0.5) * maxY;
-
+    const randomX = (Math.random() - 0.5) * 200;
+    const randomY = (Math.random() - 0.5) * 150;
     noBtn.style.transform = `translate(${randomX}px, ${randomY}px)`;
+
+    // Make Yes button grow
+    yesScale += 0.1;
+    yesBtn.style.transform = `scale(${yesScale})`;
 });
 
-// Yes click
+// Yes clicked
 yesBtn.addEventListener("click", function() {
     message.style.display = "block";
+    startConfetti();
 });
 
-// Create floating hearts
+// Floating hearts
 function createHeart() {
     const heart = document.createElement("div");
     heart.classList.add("heart");
-    heart.innerHTML = "❤️";
+    heart.innerHTML = "💖";
     heart.style.left = Math.random() * 100 + "vw";
-    heart.style.fontSize = Math.random() * 20 + 10 + "px";
+    heart.style.fontSize = Math.random() * 20 + 15 + "px";
     document.body.appendChild(heart);
-
-    setTimeout(() => {
-        heart.remove();
-    }, 6000);
+    setTimeout(() => heart.remove(), 6000);
 }
-
 setInterval(createHeart, 300);
+
+// Simple confetti
+function startConfetti() {
+    for (let i = 0; i < 100; i++) {
+        let confetti = document.createElement("div");
+        confetti.innerHTML = "🎉";
+        confetti.style.position = "absolute";
+        confetti.style.left = Math.random() * 100 + "vw";
+        confetti.style.top = "-10px";
+        confetti.style.fontSize = "20px";
+        confetti.style.animation = "floatUp 3s linear forwards";
+        document.body.appendChild(confetti);
+        setTimeout(() => confetti.remove(), 3000);
+    }
+}
 </script>
 
 </body>
