--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ button {
 </div>
 
 <!-- Romantic instrumental music -->
-<audio autoplay loop>
+<audio id="bgMusic" loop>
     <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c8b1e9f2a6.mp3?filename=romantic-background-110624.mp3" type="audio/mp3">
 </audio>
 
@@ -134,6 +134,14 @@ yesBtn.addEventListener("click", function() {
     startConfetti();
 });
 
+yesBtn.addEventListener("click", function() {
+    message.style.display = "block";
+    music.volume = 0.4;
+    music.play();
+    startConfetti();
+});
+
+
 // Floating hearts
 function createHeart() {
     const heart = document.createElement("div");
@@ -160,6 +168,15 @@ function startConfetti() {
         setTimeout(() => confetti.remove(), 3000);
     }
 }
+const music = document.getElementById("bgMusic");
+
+// Play music on first user interaction
+document.addEventListener("click", function startMusic() {
+    music.volume = 0.3;
+    music.play();
+    document.removeEventListener("click", startMusic);
+});
+
 </script>
 
 </body>
