--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
 body {
     margin: 0;
-    height: 100vh;
+    min-height: 100svh;
     overflow: hidden;
     font-family: 'Comic Sans MS', cursive;
     background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #ffdde1, #ffc3a0);
@@ -28,6 +28,7 @@ body {
 .container {
     text-align: center;
     display: none;
+    padding: 20px;
 }
 
 h1 {
@@ -63,11 +64,12 @@ button {
 
 #message {
     display: none;
-    font-size: 26px;
+    font-size: 24px;
     color: white;
     margin-top: 20px;
 }
 
+/* Start screen */
 #startScreen {
     position: fixed;
     inset: 0;
@@ -79,8 +81,11 @@ button {
     font-size: 2rem;
     cursor: pointer;
     z-index: 999;
+    text-align: center;
+    padding: 20px;
 }
 
+/* Floating hearts */
 .heart {
     position: absolute;
     animation: floatUp 6s linear infinite;
@@ -89,6 +94,19 @@ button {
 @keyframes floatUp {
     0% { transform: translateY(100vh); opacity: 1; }
     100% { transform: translateY(-10vh); opacity: 0; }
+}
+
+/* Mobile optimization */
+@media (max-width: 600px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    button {
+        display: block;
+        width: 80%;
+        margin: 15px auto;
+    }
 }
 </style>
 </head>
@@ -105,7 +123,7 @@ button {
 </div>
 
 <audio id="bgMusic" loop>
-    <source src="music" type="audio/mp3">
+    <source src="music.mp3" type="audio/mp3">
 </audio>
 
 <script>
@@ -127,19 +145,18 @@ startScreen.addEventListener("click", () => {
     container.style.display = "block";
 });
 
-// No button moves slightly on hover
-noBtn.addEventListener("mouseenter", () => {
+function moveNoButton() {
     noAttempts++;
 
-    const randomX = (Math.random() - 0.5) * 180;
-    const randomY = (Math.random() - 0.5) * 120;
+    const randomX = (Math.random() - 0.5) * 150;
+    const randomY = (Math.random() - 0.5) * 100;
     noBtn.style.transform = `translate(${randomX}px, ${randomY}px)`;
 
     yesScale += 0.1;
     yesBtn.style.transform = `scale(${yesScale})`;
 
     if (noAttempts === 1) {
-        message.innerHTML = "Hey 🥶 I think you clicked the wrong button 💔";
+        message.innerHTML = "Hey 🥶 I think you tapped the wrong button 💔";
     } else if (noAttempts <= 5) {
         message.innerHTML = "Hey !! Stop being mean 😭";
     } else {
@@ -147,7 +164,13 @@ noBtn.addEventListener("mouseenter", () => {
     }
 
     message.style.display = "block";
-});
+}
+
+// Desktop hover
+noBtn.addEventListener("mouseenter", moveNoButton);
+
+// Mobile touch
+noBtn.addEventListener("touchstart", moveNoButton);
 
 // Yes clicked
 yesBtn.addEventListener("click", () => {
