--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
     min-height: 100svh;
     overflow: hidden;
     font-family: 'Comic Sans MS', cursive;
-    background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #ffdde1, #ffc3a0);
+    background: linear-gradient(-45deg, #ffd1dc, #ffc0cb, #ffb6c1, #ffccd5);
     background-size: 400% 400%;
     animation: gradientBG 8s ease infinite;
     display: flex;
@@ -33,8 +33,7 @@ body {
 
 h1 {
     font-size: 3rem;
-    color: white;
-    text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+    color: #c2185b;
 }
 
 button {
@@ -45,35 +44,29 @@ button {
     cursor: pointer;
     margin: 20px;
     transition: all 0.3s ease;
-}
-
-#yesBtn {
-    background: #ff4b5c;
+    background: #ff69b4;
     color: white;
 }
 
-#yesBtn:hover {
-    transform: scale(1.1);
+button:hover {
+    transform: scale(1.05);
 }
 
 #noBtn {
-    background: white;
-    color: #ff4b5c;
     position: relative;
 }
 
 #message {
     display: none;
     font-size: 24px;
-    color: white;
+    color: #b0003a;
     margin-top: 20px;
 }
 
-/* Start screen */
 #startScreen {
     position: fixed;
     inset: 0;
-    background: linear-gradient(135deg, #ff758c, #ff7eb3);
+    background: linear-gradient(135deg, #ff69b4, #ff1493);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,11 +89,9 @@ button {
     100% { transform: translateY(-10vh); opacity: 0; }
 }
 
-/* Mobile optimization */
+/* Mobile */
 @media (max-width: 600px) {
-    h1 {
-        font-size: 2rem;
-    }
+    h1 { font-size: 2rem; }
 
     button {
         display: block;
@@ -134,10 +125,9 @@ const noBtn = document.getElementById("noBtn");
 const yesBtn = document.getElementById("yesBtn");
 const message = document.getElementById("message");
 
-let yesScale = 1;
 let noAttempts = 0;
 
-// Start site + play music (Safari safe)
+// Start site + play music
 startScreen.addEventListener("click", () => {
     music.volume = 0.5;
     music.play();
@@ -152,11 +142,8 @@ function moveNoButton() {
     const randomY = (Math.random() - 0.5) * 100;
     noBtn.style.transform = `translate(${randomX}px, ${randomY}px)`;
 
-    yesScale += 0.1;
-    yesBtn.style.transform = `scale(${yesScale})`;
-
     if (noAttempts === 1) {
-        message.innerHTML = "Hey 🥶 I think you tapped the wrong button 💔";
+        message.innerHTML = "I think you tapped the wrong button 💔";
     } else if (noAttempts <= 5) {
         message.innerHTML = "Hey !! Stop being mean 😭";
     } else {
@@ -166,15 +153,15 @@ function moveNoButton() {
     message.style.display = "block";
 }
 
-// Desktop hover
+// Desktop
 noBtn.addEventListener("mouseenter", moveNoButton);
 
-// Mobile touch
+// Mobile
 noBtn.addEventListener("touchstart", moveNoButton);
 
 // Yes clicked
 yesBtn.addEventListener("click", () => {
-    message.innerHTML = "YAYYYY 🥰💍 You just made me the happiest person alive 💕";
+    message.innerHTML = "YAYYYY 🥰 You just made me so happy 💕";
     message.style.display = "block";
     startConfetti();
 });
@@ -193,9 +180,9 @@ setInterval(createHeart, 400);
 
 // Confetti
 function startConfetti() {
-    for (let i = 0; i < 80; i++) {
+    for (let i = 0; i < 60; i++) {
         let confetti = document.createElement("div");
-        confetti.innerHTML = "🎉";
+        confetti.innerHTML = "💗";
         confetti.style.position = "absolute";
         confetti.style.left = Math.random() * 100 + "vw";
         confetti.style.top = "-10px";
